--- a/package.json
+++ b/package.json
@@ -5,10 +5,15 @@
   "keywords": [],
   "main": "src/index.tsx",
   "dependencies": {
-    "react": "17.0.0",
-    "react-dom": "17.0.0",
-    "react-router-dom": "5.2.0",
-    "react-scripts": "3.3.0"
+    "@types/react-router-dom": "^5.1.7",
+    "@types/react": "^16.14.2",
+    "@types/react-dom": "^16.9.10",
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1",
+    "react-router-dom": "^5.2.0",
+    "react-scripts": "^4.0.1",
+    "typescript": "^4.1.3",
+    "web-vitals": "^0.2.4"
   },
   "devDependencies": {
     "@types/react": "16.9.19",
@@ -18,13 +23,25 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test --env=jsdom",
+    "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
-  "browserslist": [
-    ">0.2%",
-    "not dead",
-    "not ie <= 11",
-    "not op_mini all"
-  ]
+  "eslintConfig": {
+    "extends": [
+      "react-app",
+      "react-app/jest"
+    ]
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
+  }
 }
